@@ -2321,10 +2321,6 @@ int mnstr_readInt_wrap(int *data, Stream *S);
 str mnstr_readIntwrap(int *ret, Stream *S);
 int mnstr_read_string(str *res, Stream *S);
 str mnstr_read_stringwrap(str *res, Stream *s);
-str mnstr_socket_rastreamwrap(Stream *S, int *socket, str *name);
-str mnstr_socket_rstreamwrap(Stream *S, int *socket, str *name);
-str mnstr_socket_wastreamwrap(Stream *S, int *socket, str *name);
-str mnstr_socket_wstreamwrap(Stream *S, int *socket, str *name);
 int mnstr_writeInt_wrap(Stream *S, int *data);
 str mnstr_writeIntwrap(void *ret, Stream *S, int *data);
 int mnstr_write_string(Stream *S, str data);
