@@ -87,75 +87,6 @@ str mnstr_open_wastreamwrap(Stream *S, str *filename)
 }
 
 str
-mnstr_socket_rstreamwrap(Stream *S, int *socket, str *name)
-{
-	stream *s;
-
-	if ((s = socket_rstream(*socket, *name)) == NULL || mnstr_errnr(s)) {
-		int errnr = mnstr_errnr(s);
-		if (s)
-			mnstr_destroy(s);
-		throw(IO, "streams.open", "could not open socket: %s",
-				strerror(errnr));
-	} else {
-		*(stream**)S = s;
-	}
-
-	return MAL_SUCCEED;
-}
-str
-mnstr_socket_wstreamwrap(Stream *S, int *socket, str *name)
-{
-	stream *s;
-
-	if ((s = socket_wstream(*socket, *name)) == NULL || mnstr_errnr(s)) {
-		int errnr = mnstr_errnr(s);
-		if (s)
-			mnstr_destroy(s);
-		throw(IO, "streams.open", "could not open socket: %s",
-				strerror(errnr));
-	} else {
-		*(stream**)S = s;
-	}
-
-	return MAL_SUCCEED;
-}
-str
-mnstr_socket_rastreamwrap(Stream *S, int *socket, str *name)
-{
-	stream *s;
-
-	if ((s = socket_rastream(*socket, *name)) == NULL || mnstr_errnr(s)) {
-		int errnr = mnstr_errnr(s);
-		if (s)
-			mnstr_destroy(s);
-		throw(IO, "streams.open", "could not open socket: %s",
-				strerror(errnr));
-	} else {
-		*(stream**)S = s;
-	}
-
-	return MAL_SUCCEED;
-}
-str
-mnstr_socket_wastreamwrap(Stream *S, int *socket, str *name)
-{
-	stream *s;
-
-	if ((s = socket_wastream(*socket, *name)) == NULL || mnstr_errnr(s)) {
-		int errnr = mnstr_errnr(s);
-		if (s)
-			mnstr_destroy(s);
-		throw(IO, "streams.open", "could not open socket: %s",
-				strerror(errnr));
-	} else {
-		*(stream**)S = s;
-	}
-
-	return MAL_SUCCEED;
-}
-
-str
 mnstr_write_stringwrap(void *ret, Stream *S, str *data)
 {
 	stream *s = *(stream **)S;
